k8s/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-node
  template:
    metadata:
      labels:
        app: redis-node
    spec:
      containers:
        - name: redis-node
          image: redis-node:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: redis-node
spec:
  selector:
    app: redis-node
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
