k8s/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-react
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-react
  template:
    metadata:
      labels:
        app: redis-react
    spec:
      containers:
        - name: redis-react
          image: redis-react:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis-react
spec:
  selector:
    app: redis-react
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
