k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: monapp.local
      http:
        paths:
          - path: /item
            pathType: Prefix
            backend:
              service:
                name: redis-node
                port:
                  number: 3000
          - path: /items
            pathType: Prefix
            backend:
              service:
                name: redis-node
                port:
                  number: 3000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: redis-node
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-react
                port:
                  number: 80
